--- a/lib/CoffeeShop/Webinterface/views/layouts/main.tt
+++ b/lib/CoffeeShop/Webinterface/views/layouts/main.tt
@@ -1,12 +1,27 @@
 <html>
-<head>...</head>
+<head>
+  <link rel="stylesheet" href="/css/bootstrap.css">
+  <script src="/js/bootstrap.js" ></script>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+	
+</head>
 <body>
-<div id="header">
+<!-- Image and text -->
+<div class="main-header">
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/">
+    CoffeeShop
+  </a>
+</nav>
 </div>
 
 <div id="content">
 	[% content %]
 </div>
 
+<div id="footer">
+</div>
 </body>
 </html>
